--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,67 +1,49 @@
-name: CI
+name: Deploy Hexo to GitHub Pages
 
 on:
   push:
     branches:
       - main
 
-env:
-  GIT_USER: Niomaor
-  GIT_EMAIL: niomaor@163.com
-  THEME_REPO: yelog/hexo-theme-3-hexo
-  THEME_BRANCH: master
-  DEPLOY_REPO: Niomaor/downsite
-  DEPLOY_BRANCH: gh-pages
-
 jobs:
-  build:
-    name: Build on node ${{ matrix.node_version }} and ${{ matrix.os }}
+  deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node_version: [16.x]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Checkout theme repo
-        uses: actions/checkout@v4
+      - name: Checkout blog source
+        uses: actions/checkout@v2
         with:
-          repository: ${{ env.THEME_REPO }}
-          ref: ${{ env.THEME_BRANCH }}
-          path: themes/3-hexo
+          path: blog
 
-      - name: Checkout deploy repo
-        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
         with:
-          repository: ${{ env.DEPLOY_REPO }}
-          ref: ${{ env.DEPLOY_BRANCH }}
-          path: .deploy_git
+          node-version: "16" # 设置 Node.js 版本
 
-      - name: Use Node.js ${{ matrix.node_version }}
-        uses: actions/setup-node@v4
+      - name: Cache dependencies
+        uses: actions/cache@v2
         with:
-          node-version: ${{ matrix.node_version }}
-
-      - name: Configuration environment
-        env:
-          HEXO_DEPLOY_PRI: ${{secrets.HEXO_DEPLOY_PRI}}
-        run: |
-          sudo timedatectl set-timezone "Asia/Shanghai"
-          mkdir -p ~/.ssh/
-          echo "$HEXO_DEPLOY_PRI" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.name $GIT_USER
-          git config --global user.email $GIT_EMAIL
-          cp _config.theme.yml themes/3-hexo/_config.yml
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm install
+        working-directory: ./blog
 
-      - name: Deploy hexo
-        run: |
-          npm run deploy
+      - name: Install Hexo CLI
+        run: npm install -g hexo-cli
+        working-directory: ./blog
+
+      - name: Generate static pages
+        run: hexo generate
+        working-directory: ./blog
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.PERSONAL_TOKEN }}
+          publish_dir: ./blog/public
+          external_repository: Niomaor/downsite
+          publish_branch: gh-pages
