--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://download.tplus.eu.org
+url: https://dl.seave.top
 permalink: article/:hash.html
 permalink_defaults:
 pretty_urls:
