--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout blog source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           path: blog
 
@@ -45,5 +45,5 @@ jobs:
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
           publish_dir: ./blog/public
-          external_repository: Niomaor/downsite
+          external_repository: Stoeaves/downsite
           publish_branch: gh-pages
